--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,13 +54,15 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: |
-        choco install wxwidgets
-    - name: Build
-      run: |
-        make -j
-        make install
+    - uses: numworks/setup-msys2@v1
+      with:
+        msystem: MSYS32
+    - run: msys2do pacman --noconfirm -S -noconfirm --noprogressbar
+    - run: msys2do pacman --noconfirm -U mingw-w64-*-any.pkg.tar.xz
+    - run: |
+        set MSYSTEM=MINGW32
+        msys2do make -j
+        msys2do make install
         bin/bossac --help
     - uses: actions/upload-artifact@v1
       if: always()
